--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: false
 language: node_js
 node_js:
   - "8.10"
-script: webpack
+script: npm run build && npm test
 branches:
  only:
    - "master"
