--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Dream Journal Skill for Alexa",
   "main": "index.js",
   "scripts": {
-      "test": "mocha './src/**/*.test.js'"
+    "build": "webpack",
+    "test": "mocha -r ts-node/register src/**/*.test.ts"
   },
   "engines": {
     "node": ">=8.10"
@@ -36,6 +37,7 @@
     "ts-loader": "^4.2.0",
     "ts-node": "6.0.0",
     "tslint": "^5.9.1",
+    "tslint-no-unused-expression-chai": "^0.1.3",
     "typescript": "^2.8.3",
     "virtual-alexa": "^0.6.6",
     "webpack": "^4.6.0",
