--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Dream Journal Skill for Alexa",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "test": "mocha -r ts-node/register src/**/*.test.ts"
   },
   "engines": {
     "node": ">=8.10"
@@ -23,13 +24,24 @@
   },
   "homepage": "https://github.com/michaelgriscom/alexa-dream-journal#readme",
   "devDependencies": {
+    "@types/mocha": "latest",
     "@types/node": "^10.9.4",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
+    "@types/sinon-chai": "latest",
+    "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^5.1.1",
+    "remap-istanbul": "^0.11.0",
+    "sinon": "^4.5.0",
+    "sinon-chai": "^3.0.0",
     "ts-loader": "^4.2.0",
     "ts-node": "6.0.0",
     "tslint": "^5.9.1",
+    "tslint-no-unused-expression-chai": "^0.1.3",
     "typescript": "^2.8.3",
+    "virtual-alexa": "^0.6.6",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
     "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {
