Adding placeholder intent for create entry

--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   },
   "homepage": "https://github.com/michaelgriscom/alexa-dream-journal#readme",
   "devDependencies": {
-    "@types/mocha": "latest",
+    "@types/mocha": "^5.2.5",
     "@types/node": "^10.9.4",
-    "@types/sinon-chai": "latest",
+    "@types/sinon-chai": "^3.2.0",
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
     "istanbul": "^0.4.5",
@@ -49,6 +49,7 @@
     "ask-sdk-model": "^1.5.0",
     "moment": "^2.17.1",
     "source-map-loader": "^0.2.3",
-    "source-map-support": "^0.5.4"
+    "source-map-support": "^0.5.4",
+    "typescript-ioc": "^1.2.4"
   }
 }
