--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
         "module": "commonjs",
         "target": "es6",
         "noUnusedLocals": true,
-        "allowJs": true
+        "allowJs": true,
+        "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
     },
     "include": [
         "./src/**/*"
