switching to zip

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,12 @@ branches:
 cache:
   directories:
   - "$HOME/.npm"
+before_deploy:
+- cd ..
+- zip ${TRAVIS_BUILD_DIR}${REPO}-${BUILD_ENV}-${TRAVIS_TAG}-${TRAVIS_BUILD_NUMBER}.zip ${REPO}
 deploy:
   provider: s3
   access_key_id: $AWS_ACCESS_KEY_ID
   secret_access_key: $AWS_SECRET_ACCESS_KEY
+  file: ${TRAVIS_BUILD_DIR}${REPO}-${BUILD_ENV}-${TRAVIS_TAG}-${TRAVIS_BUILD_NUMBER}.zip
   bucket: dream-skill
