--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "ask-sdk-core": "^2.0.7",
     "ask-sdk-model": "^1.5.0",
+    "googleapis": "^33.0.0",
     "moment": "^2.17.1",
     "source-map-loader": "^0.2.3",
     "source-map-support": "^0.5.4",
