--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "moment": "^2.17.1",
     "source-map-loader": "^0.2.3",
     "source-map-support": "^0.5.4",
-    "typescript-ioc": "^1.2.4"
+    "typescript-ioc": "^1.2.4",
+    "typescript-memoize": "^1.0.0-alpha.3"
   }
 }
